filter and components

--- a/src/less/settings/type.setting.less
+++ b/src/less/settings/type.setting.less
@@ -1,12 +1,21 @@
 @font-face {
-    font-family: 'Gotham';
-      src: url('../../assets/fonts/gotham-light.ttf') format('truetype');
-    font-weight: 300;
-    font-style: normal;
-    font-display: swap;
- }
- 
+  font-family: 'Gotham';
+  src: url('../../assets/fonts/gotham-light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'GothamMed';
+  src: url('../../assets/fonts/gotham-medium.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
 @primary-font: Gotham, 'Helvetica', 'Arial', sans-serif;
+@secondary-font: GothamMed, 'Helvetica', 'Arial', sans-serif;
 
 @font-weight-bold: 600;
 @font-weight-medium-bold: 500;
