--- a/src/less/shell.less
+++ b/src/less/shell.less
@@ -1,50 +1,55 @@
-
-@import "settings/colours.setting.less"; 
-@import "settings/type.setting.less"; 
+@import 'settings/colours.setting.less';
+@import 'settings/type.setting.less';
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 :global(html) {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 :global(body) {
-    font-family: @primary-font;
-    font-weight: @font-weight-light;
-    color: @squid-ink;
-    text-align: left;
-    margin: 0;
-    padding: 0;
-    font-size: 1.6rem;
-    overflow-x: hidden;
-    background-color: @background-grey;
+  font-family: @primary-font;
+  color: @squid-ink;
+  text-align: left;
+  margin: 0;
+  padding: 0;
+  font-size: 1.6rem;
+  overflow-x: hidden;
+  background-color: @white;
 }
 
 :global(.wrapper) {
-    width: 95%;
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
+  width: 95%;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 :global(.full-bleed) {
-    width: 100vw;
-    margin-left: calc(50% - 50vw);
+  width: 100vw;
+  margin-left: calc(50% - 50vw);
 }
 
-
 :global(label) {
-    width: 100%;
-    display: block;
+  width: 100%;
+  display: block;
 }
 
 :global(h1) {
-    font-size: 2.4rem;
+  font-size: 2.4rem;
+  font-family: @secondary-font;
 }
-
-:global(input), :global(select) {
-    font-family: @primary-font;
-    font-weight: @font-weight-light;
+:global(span) {
+  font-family: @secondary-font;
+}
+:global(ul) {
+  padding: 0;
+  list-style-type: none;
+}
+:global(input),
+:global(select) {
+  font-family: @primary-font;
+  font-weight: @font-weight-light;
 }
